# animal-soup-lite

./: .gitignore  README.md  USER_MANUAL.md  defaults.json  pyproject.toml  run_detection.py
.github/workflows/: ci.yaml
animal_soup_lite/: __init__.py  _version.py  gui.py  output.py  session.py
animal_soup_lite/utils/: __init__.py  defaults.py  log.py
