# ===== Project info

[project]
dynamic = ["version"]
name = "animal_soup_lite"
description = "Clepio 3D-Path viewer"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Caitlin Lewis" },
]
keywords = ["behavior detection", "automated"]
requires-python = ">= 3.12"
dependencies = [
    "rendercanvas",
    "glfw",
    "wgpu[imgui]",
    "pygfx==0.15.3",
    "fastplotlib",
    "opencv-python",
    "decord",
    "pandas",
    "tqdm"
]

[project.optional-dependencies]
lint = ["ruff"]
docs = ["sphinx>7.2", "sphinx_rtd_theme", "sphinx-gallery"]
tests = ["pytest", "imageio"]
dev = ["animal-soup-lite[docs,tests,lint]"]

[project.urls]
Repository = "https://github.com/hantman-lab/animal-soup-lite"

# ===== Building

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ===== Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF", "TC"]
ignore = [
    "E501",   # Line too long
    "E731",   # Do not assign a `lambda` expression, use a `def`
    "B019",   # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`"
]